test/parse/relaxed/bad/vlinecontnov.sol
s SATISFIABLE
v 1
oops
0
